init: start singolo3-task

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,11 @@ singolo1.scss
 singolo1.css.map
 
 
+singolo2.html
+singolo2.css
+
 singolo2.scss
 singolo2.css.map
+
+singolo3.scss
+singolo3.css.map
