init: start singolo-full-task

--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,11 @@ singolo2.css
 singolo2.scss
 singolo2.css.map
 
+singolo3.html
+singolo3.css
+
 singolo3.scss
 singolo3.css.map
+
+style.scss
+style.css.map
